[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/tileset.png" type="Texture" id=1]
[ext_resource path="res://Environment/Rail.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.1443, 1.73369 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.5739, 6.50398 )

[node name="Rail" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2147483648
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.235962, -8.45485 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 224.357, 99, 18.4995 )
region_filter_clip = true

[node name="StaticCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15.338 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2DOnRail" type="Area2D" parent="." groups=[
"rails",
]]
collision_layer = 2

[node name="OnRailCollision" type="CollisionShape2D" parent="Area2DOnRail"]
modulate = Color( 0.96875, 0.0718994, 0.0718994, 1 )
self_modulate = Color( 0.933594, 0.809601, 0.809601, 1 )
position = Vector2( -0.157486, -23.3622 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2DOnRail" to="." method="_on_Area2DOnRail_area_entered"]
[connection signal="area_exited" from="Area2DOnRail" to="." method="_on_Area2DOnRail_area_exited"]
